# apecs-hint-demo

./: README.md  apecs-hint-demo.cabal  new-entity  stack.yaml
app/: Main.hs
src/: ApecsHintDemo.hs  Main.hs
