cabal-version:      2.4
name:               apecs-hint-demo
version:            0.1.0.0

executable apecs-hint-demo
  main-is:          Main.hs
  -- exposed-modules:  Lib
  build-depends:    base
                  , apecs
                  , apecs-gloss
                  , hint
                  , linear
                  , random
  hs-source-dirs:   src
  ghc-options: -W -Wall
