cabal-version:      2.4
name:               apecs-hint-demo
version:            0.1.0.0

library
  exposed-modules:  ApecsHintDemo
  build-depends:    base
                  , apecs
                  , apecs-gloss
                  , linear
  hs-source-dirs:   src
  ghc-options: -W -Wall

executable apecs-hint-demo
  main-is:          Main.hs
  build-depends:    base
                  , apecs
                  , apecs-hint-demo
                  , apecs-gloss
                  , hint
                  , linear
  hs-source-dirs:   app
  ghc-options: -W -Wall
